refactor: replace get(0) with getFirst() in query condition tests